@@ -4,22 +4,23 @@ using Microsoft.VisualStudio.Shell;
 using System;
 using System.Diagnostics.CodeAnalysis;
 using System.Runtime.InteropServices;
+using System.Threading;
 using System.Windows.Forms;
 
 namespace SublimeVS
 {
-    [PackageRegistration(UseManagedResourcesOnly = true)]
-    [InstalledProductRegistration("#110", "#112", "1.2.0", IconResourceID = 400)] // Info on this package for Help/About
+    [PackageRegistration(UseManagedResourcesOnly = true, AllowsBackgroundLoading = true)]
+    [InstalledProductRegistration("#110", "#112", "1.2.1", IconResourceID = 400)] // Info on this package for Help/About
     [ProvideMenuResource("Menus.ctmenu", 1)]
     [Guid(SublimeVSPackage.PackageGuidString)]
-    [ProvideAutoLoad(VSConstants.UICONTEXT.ShellInitialized_string)]
+    [ProvideAutoLoad(VSConstants.UICONTEXT.ShellInitialized_string, PackageAutoLoadFlags.BackgroundLoad)]
     [SuppressMessage("StyleCop.CSharp.DocumentationRules", "SA1650:ElementDocumentationMustBeSpelledCorrectly", Justification = "pkgdef, VS and vsixmanifest are valid VS terms")]
-    public sealed class SublimeVSPackage : Package
+    public sealed class SublimeVSPackage : AsyncPackage
     {
         public const string PackageGuidString = "10faf7a3-f1bb-4836-9e6b-b5f52bd88031";
         private const string SID_SVsSettingsPersistenceManager = "9B164E40-C3A2-4363-9BC5-EB4039DEF653";
 
-        private const string SublimeSettingsFileName = @"Shortcuts\SublimeShortcuts.vssettings";
+        //private const string SublimeSettingsFileName = @"Shortcuts\SublimeShortcuts.vssettings";
 
         public static ISettingsManager SettingsManager { get; private set; }
 
@@ -31,17 +32,18 @@ namespace SublimeVS
         /// Initialization of the package; this method is called right after the package is sited, so this is the place
         /// where you can put all the initialization code that rely on services provided by VisualStudio.
         /// </summary>
-        protected override void Initialize()
+        protected override async System.Threading.Tasks.Task InitializeAsync(CancellationToken cancellationToken, IProgress<ServiceProgressData> progress)
         {
+            await base.InitializeAsync(cancellationToken, progress);
+
             // Initialize settings manager (TODO: could be done lazily on get)
             SettingsManager = (ISettingsManager)GetGlobalService(typeof(SVsSettingsPersistenceManager));
 
-            base.Initialize();
-            SublimeSettingsManager.Initialize(this);
-            CheckFirstTimeSetup();
+            await SublimeSettingsManager.InitializeAsync(this);
+            await CheckFirstTimeSetupAsync();
         }
 
-        private void CheckFirstTimeSetup()
+        private async System.Threading.Tasks.Task CheckFirstTimeSetupAsync()
         {
             // Check if we need to do first-time setup
             const string firstTimeRunSettingName = "SublimeVSSetupAck02";
@@ -62,9 +64,9 @@ namespace SublimeVS
                 if (MessageBox.Show(message, title, MessageBoxButtons.OKCancel) == DialogResult.OK)
                 {
                     // Apply First Time Settings();
-                    SettingsManager.SetValueAsync(firstTimeRunSettingName, true, isMachineLocal: true);
+                    await SettingsManager.SetValueAsync(firstTimeRunSettingName, true, isMachineLocal: true);
 
-                    SublimeSettingsManager.Instance.ApplySublimeVSSettings();
+                    await SublimeSettingsManager.Instance.ApplySublimeVSSettingsAsync();
                 }
             }
         }
