@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <PackageManifest Version="2.0.0" xmlns="http://schemas.microsoft.com/developer/vsx-schema/2011" xmlns:d="http://schemas.microsoft.com/developer/vsx-schema-design/2011">
     <Metadata>
-        <Identity Id="SublimeVS.7b1efb7d-cb70-46f9-a1aa-90b14f4a7b34" Version="1.2.0" Language="en-US" Publisher="Justin Clareburt" />
+        <Identity Id="SublimeVS.7b1efb7d-cb70-46f9-a1aa-90b14f4a7b34" Version="1.2.1" Language="en-US" Publisher="Justin Clareburt" />
         <DisplayName>SublimeVS</DisplayName>
         <Description xml:space="preserve">Provides some Sublime Text features in Visual Studio</Description>
         <MoreInfo>https://marketplace.visualstudio.com/items?itemName=JustinClareburtMSFT.SublimeVS</MoreInfo>
