@@ -1,4 +1,5 @@
 ﻿SublimeVS
+06-May-2020 v1.2.1 Switched package loading to be Async (VS2019 requirement)
 05-May-2020 v1.2.0 Upgraded to VS2019
 21-May-2018 v1.1.0 Replaced MixEdit with SelectNextOccurrence
 08-Aug-2017 v1.0.4 Added WhackWhackTerminal v0.2.4
